Closed Bug 201077 Opened 23 years ago Closed 23 years ago

Dragging a bookmark item to the last bookmark folder causes the application to hang

Categories

(SeaMonkey :: Bookmarks & History, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4beta

People

(Reporter: chrispetersen, Assigned: janv)

References

Details

(Keywords: hang, regression, Whiteboard: [adt1])

Attachments

(1 file)

Build: 2003-04-07-03 Mach0 trunk and 2003-04-06-04 Win32 trunk Platform: All Expected Results: Item that is being dragged should be placed into folder What I got: Application hangs Steps to reproduce: 1) Select Manage Bookmarks from Bookmarks menu 2) Select a folder, bookmark item, or separator 3) Drag and drop this item into the last folder displayed in bookmark window. 4) Application "hangs"
Keywords: hang, nsbeta1, regression
Reassigning
Assignee: ben → varga
Confirming, I can reproduce it too.
Priority: -- → P3
Target Milestone: --- → mozilla1.4beta
Isn't it a dupe of bug 200878?
It also fails for me (2003040708). However, it ONLY fails if the last folder is closed. If it is expanded so that all of the other bookmarks within that folder are visible, it works.
Per nav triage: nsbeta1+/adt1
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt1]
Okey, I know what's happening, patch on the way.
Status: NEW → ASSIGNED
Attached patch patchSplinter Review
mDropRow can be invalid after calling mView->Drop() because Drop() can affect row indeces (remove a row above the drop row in this case).
Attachment #121117 - Flags: superreview?(jaggernaut)
Attachment #121117 - Flags: review?(bryner)
*** Bug 200878 has been marked as a duplicate of this bug. ***
Attachment #121117 - Flags: review?(bryner) → review+
Attachment #121117 - Flags: superreview?(jaggernaut)
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified in the 2003-04-22-08 Macho and Win32 trunk builds.
Status: RESOLVED → VERIFIED
*** Bug 202950 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: