Fix for bug 201077. Dragging a bookmark item to the last bookmark folder causes the application to hang. r+sr=bryner